Add fledge:: info to adaptive prereg implementation page

--- a/adaptive_preregistration_implementation.qmd
+++ b/adaptive_preregistration_implementation.qmd
@@ -167,23 +167,39 @@ How do we deal with this?
 We will leverage [GitHub's tagging and release feature](https://help.github.com/en/github/administering-a-repository/releasing-projects-on-github) in conjunction with [Semantic Versioning]((https://semver.org/)) to document and track changes to the preregistration document.
 
 GitHub releases mark software iterations that you can release and deploy[^4].
-Within the context of adaptive preregistration, we can use releases to mark interim versions of the preregistration, as well as to take a snapshot of the entire repository at that moment in time.
+Within the context of adaptive preregistration, we can use releases to mark interim versions of the preregistration, as well as to take a snapshot of the state of the entire repository at that moment in time.
 
+A summary of the types of preregistration changes, and the corresponding required version and GitHub features are presented in @tbl-preregistration-versioning.
 Note that anything up until the complete preregistration should be additionally tagged as a 'pre-release' to communicate that the initial preregistration is not yet complete.
 
-| Preregistration Change or Action                                                                                                                                                                                                                                                                                       | GitHub Mechanism                                                                                                                                                                                                                                                        | Semantic Versioning                                                      |
-|-----------------------------|-------------------------|-------------------|
-| **Changes preceding initial completion of preregistration**                                                                                                                                                                                                                                                            | Tag and Mark as 'pre-release'                                                                                                                                                                                                                                           | `Minor` increment. E.g. `0.2.0` The `Major` value should not exceed `0`. |
-| **Incremental Change**, e.g. respond to new question.                                                                                                                                                                                                                                                                  | Tag and Release                                                                                                                                                                                                                                                         | `Minor` increment. E.g. `0.2.0` The `Major` value should not exceed `0`. |
-| **Initial Preregistration complete**. Note that 'complete' needs to be decided. Is complete after all preliminary and investigatory analyses have been done and the final Preregistration is complete, or is it the first iteration, where no more items can be filled out until some initial analyses are undertaken? | Tag and Release                                                                                                                                                                                                                                                         | `Major` increment to `1.0.0`                                             |
-| **Major change to a complete Preregistration** -- no looking or analysing at data                                                                                                                                                                                                                                      | Tag and Release                                                                                                                                                                                                                                                         | `Major` increment `>1.0.0`                                               |
-| **Linking implemented work to the Preregistration Item**                                                                                                                                                                                                                                                               | Update Preregistration with GH Issue Link and all relevant commit hashes pertaining to that Preregistration Item + Commit. Tag and Release that preregistration commit.                                                                                                 | `Minor` increment.                                                       |
-| **Data-dependent changes with registered flexibility** Adapting the Preregistration on the basis of results from preliminary or investigatory analyses                                                                                                                                                                 | Update Preregistration with GH Issue Link and all relevant commit hashes pertaining to that Preregistration Item + Commit. Respond to dependent incomplete Preregistration Items or Update existing / already completed Preregistration Items + Commit. Tag and Release | `Major` increment.                                                       |
-| **Minor mistakes**                                                                                                                                                                                                                                                                                                     | Changes including small typos, or minor elaborations on existing specified plans                                                                                                                                                                                        | `Patch` increment. E.g. `0.1.2`.                                         |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------+
+| Preregistration Change or Action                                                                                                                                                                                                                                                                                       | GitHub Mechanism                                                                                                                                                                                                                                                         | Semantic Versioning                                                                                      |
++========================================================================================================================================================================================================================================================================================================================+==========================================================================================================================================================================================================================================================================+==========================================================================================================+
+| **Changes preceding initial completion of preregistration**                                                                                                                                                                                                                                                            | Tag and Mark as 'pre-release'                                                                                                                                                                                                                                            | `Minor` increment. E.g. `0.2.0` The `Major` value should not exceed `0`.\                                |
+|                                                                                                                                                                                                                                                                                                                        |                                                                                                                                                                                                                                                                          | `fledge::bump_version("minor")`                                                                          |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------+
+| **Incremental Change**, e.g. respond to new question.                                                                                                                                                                                                                                                                  | Tag and Release                                                                                                                                                                                                                                                          | `Minor` increment. E.g. `0.2.0` The `Major` value should not exceed `0`. `fledge::bump_version("minor")` |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------+
+| **Initial Preregistration complete**. Note that 'complete' needs to be decided. Is complete after all preliminary and investigatory analyses have been done and the final Preregistration is complete, or is it the first iteration, where no more items can be filled out until some initial analyses are undertaken? | Tag and Release                                                                                                                                                                                                                                                          | `Major` increment to `1.0.0`. `fledge::bump_version("major"); fledge::finalize_version()`.               |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------+
+| **Major change to a complete Preregistration** -- no looking or analysing at data.                                                                                                                                                                                                                                     | Tag and Release                                                                                                                                                                                                                                                          | `Major` increment `>1.0.0`. `fledge::bump_version("major"); fledge::finalize_version()`.                 |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------+
+| **Linking implemented work to the Preregistration Item**                                                                                                                                                                                                                                                               | Update Preregistration with GH Issue URL and all relevant commit hashes pertaining to that Preregistration Item + Commit. Tag and Release that preregistration commit.                                                                                                   | `Minor` increment. `fledge::bump_version("minor")`.                                                      |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------+
+| **Data-dependent changes with registered flexibility** Adapting the Preregistration on the basis of results from preliminary or investigatory analyses                                                                                                                                                                 | Update Preregistration with GH Issue Link and all relevant commit hashes pertaining to that Preregistration Item + Commit. Respond to dependent incomplete Preregistration Items or Update existing / already completed Preregistration Items + Commit. Tag and Release. | `Major` increment. `fledge::bump_version("major")`.                                                      |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------+
+| **Minor mistakes or changes**                                                                                                                                                                                                                                                                                          | Changes including small typos, or minor elaborations on existing specified plans                                                                                                                                                                                         | `Patch` increment. E.g. `0.1.2`. `fledge::bump_version("patch")`                                         |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------+
 
 : Types of changes to the preregistration and corresponding actions and versioning adjustments {#tbl-preregistration-versioning}
 
 ### Using the [`fledge::`](https://fledge.cynkra.com) R package for semantic versioning and to document preregistration changes
+
+The package `fledge::` can be used right from the R console to bump the version number, make releases, and auto catalogue a chronological history of changes recorded a `NEWS.md` file that is updated and published with every release.
+A detailed guide to using `fledge::` can be found here <https://fledge.cynkra.com/articles/fledge.html>.
+
+This package is not a mandatory component of the process, however can be a useful tool for implementing semantic versioning, tagging and releasing.
+All of these actions can be implemented in the GitHub browser with a point and click interface.
 
 # References
 
