--- a/data/references.bib
+++ b/data/references.bib
@@ -2110,3 +2110,52 @@ keywords = {Good modelling practice; Model evaluation; model quality; Peer revie
 	doi = {10.1007/s10654-021-00839-0},
 	note = {Citation Key: Baldwin2022a}
 }
+
+@article{ivimey2023,
+	title = {Implementing code review in the scientific workflow: Insights from ecology and evolutionary biology},
+	author = {Ivimey, Edward R and Pick, Joel L and Bairos, Kevin R and Culina, Antica and Gould, Elliot and Grainger, Matthew and Marshall, Benjamin M and Moreau, David and Paquet, Matthieu and {Royauté}, {Raphaël} and {Sánchez}, Alfredo and Silva, {Inês} and Windecker, Saras M},
+	year = {2023},
+	date = {2023},
+	journal = {Journal of Evolutionary Biology},
+	doi = {https://doi.org/10.1111/jeb.14230},
+	langid = {en}
+}
+
+@article{Liu2008,
+	title = {Bayes factors: Prior sensitivity and model generalizability},
+	author = {Liu, Charles C. and Aitkin, Murray},
+	year = {2008},
+	date = {2008},
+	journal = {Journal of Mathematical Psychology},
+	pages = {362--375},
+	volume = {52},
+	number = {6},
+	doi = {10.1016/j.jmp.2008.03.002},
+	note = {Citation Key: Liu2008}
+}
+
+@article{Grimm2016,
+	title = {Structural realism, emergence, and predictions in next-generation ecological modelling: Synthesis from a special issue},
+	author = {Grimm, Volker and Berger, Uta},
+	year = {2016},
+	date = {2016},
+	journal = {Ecological Modelling},
+	pages = {177--187},
+	volume = {326},
+	doi = {10.1016/j.ecolmodel.2016.01.001},
+	note = {Citation Key: Grimm2016}
+}
+
+@article{Dwork2015,
+	title = {The reusable holdout: Preserving validity in adaptive data analysis},
+	author = {Dwork, Cynthia and Feldman, Vitaly and Hardt, Moritz and Pitassi, Toniann and Reingold, Omer and Roth, Aaron},
+	year = {2015},
+	date = {2015},
+	journal = {Science},
+	pages = {636--638},
+	volume = {349},
+	number = {6248},
+	doi = {10.1126/science.aaa9375},
+	note = {Citation Key: Dwork2015},
+	langid = {eng}
+}
