--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ This site covers the following topics:
 
 1.  [Background on researcher degrees of freedom](RDF_QRP.qmd), the risk of questionable research practices (QRPs), and introduction to preregistration as a tool for mitigating QRPs.
 2.  Adaptive Preregistration
-    1.  [*Background*](adaptive_preregistration_background.qmd): What is adaptive preregistration, why do we need it for registering modeling analyses, and what are its defining features?
+    1.  [*Overview*](adaptive_preregistration_background.qmd): What is adaptive preregistration, why do we need it for registering modeling analyses, and what are its defining features?
     2.  [*A practical guide*](adaptive_preregistration_implementation.qmd): How to implement adaptive preregistration using [git](https://git-scm.com) and [GitHub](www.github.com).
 3.  [Preregistration template](preregistration_modelling.qmd) for model-based research in ecology and conservation.
 4.  TBC An overview of the sorts of things that we should preregister when modelling, what practices to look out for, what things should be registered as decision-trees.
